--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Poultry -- Housing'
 - !lcc 'SF'
+- GITenberg
 title: Making a Poultry House
 url: http://www.gutenberg.org/ebooks/44472
